<resources>
    <string name="app_name">InfoBITS</string>
    <string name="homepage">InfoBITS</string>
    <string name="libres">Library Resources</string>
    <string name="libservice">Library Services</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="emptystring" />
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="forgot">Enter your BITS mail</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="Login">Log In</string>
    <string name="Signup">Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="account">Account</string>
    <string name="title_activity_communication_panel">Connect With Library</string>
    <string name="title_activity_user_settings">User Settings</string>
    <string name="title_activity_daily_news">Daily News</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="mailID_sample">Loading</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="upload_image">Upload Image</string>
    <string name="title_activity_form">Form</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_news">No Headlines Found</string>
    <string name="no_news_for_week">No Headlines Found for this week</string>
    <string name="title_activity_ebooks">E-Books</string>
    <string name="title_infoBits">Info Bits Bulletin</string>
    <string name="intech">Intech</string>
    <string name="openaccess">openAccess</string>
    <string name="menu_user_account">Profile</string>
    <string name="menu_user_logout">Log Out</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_os">Shibboleth Remote Access</string>
    <string name="drawer_menu_ibb">InfoBITS Bulletin</string>
    <string name="drawer_menu_lf">Lost and Found</string>
    <string name="drawer_menu_pf">Periodical Finder</string>
    <string name="drawer_menu_afa">Ask For Articles</string>
    <string name="drawer_menu_qp">Question Papers</string>
    <string name="drawer_menu_odb">Online Databases</string>
    <string name="drawer_menu_ir">Institutional Repository</string>
    <string name="drawer_menu_ndl">National Digital Library</string>
    <string name="drawer_menu_vlab">Virtual Labs</string>
    <string name="drawer_menu_sp">Swayam Prabha</string>
    <string name="drawer_menu_sg">Shodh Ganga</string>
    <string name="drawer_menu_opac">WEB OPAC</string>

    <string name="online_db">Online Databases</string>
    <string name="claim_lost_item">Lost and Found - Claim</string>
    <string name="lost_and_found">Lost and Found</string>
    <string name="guest_user">Guest User</string>
    <string name="no_news_today">No Headlines Found for Today</string>
    <string name="book_recommendation">Book Recommendation</string>
    <string name="documents_not_found">Documents Not Found</string>
    <string name="inaccessible_database">Inaccessible Database</string>
    <string name="service_issues">Service Issues</string>
    <string name="book_review">Book Review</string>
    <string name="feedback">Feedback</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="claim_note">Note:\tBefore claiming the item please meet the librarian to verify and confirm your lost item.</string>
</resources>
